--- a/paimon-core/pom.xml
+++ b/paimon-core/pom.xml
@@ -109,7 +109,7 @@ under the License.
             <groupId>org.apache.paimon</groupId>
             <artifactId>paimon-format</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
