[hotfix] Fix typo in obs filesystem

--- a/paimon-filesystems/paimon-obs-impl/pom.xml
+++ b/paimon-filesystems/paimon-obs-impl/pom.xml
@@ -81,7 +81,7 @@
     <build>
         <plugins>
 
-            <!-- Relocate all OSS related classes -->
+            <!-- Relocate all OBS related classes -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
