--- a/paimon-lance/pom.xml
+++ b/paimon-lance/pom.xml
@@ -28,7 +28,7 @@ under the License.
         <version>1.3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>paimon-format-lance</artifactId>
+    <artifactId>paimon-lance</artifactId>
     <name>Paimon : Format : Lance</name>
 
     <properties>
