--- a/paimon-lance/src/test/resources/log4j2-test.properties
+++ b/paimon-lance/src/test/resources/log4j2-test.properties
@@ -1,4 +1,3 @@
-#!/usr/bin/env bash
 ################################################################################
 #  Licensed to the Apache Software Foundation (ASF) under one
 #  or more contributor license agreements.  See the NOTICE file
@@ -17,19 +16,13 @@
 # limitations under the License.
 ################################################################################
 
-set -e
-wget https://security.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1-1ubuntu2.1~18.04.23_amd64.deb
-sudo dpkg -i libssl1.1_1.1.1-1ubuntu2.1~18.04.23_amd64.deb
+# Set root logger level to OFF to not flood build logs
+# set manually to INFO for debugging purposes
+rootLogger.level = OFF
+rootLogger.appenderRef.test.ref = TestLogger
 
-function random_timezone() {
-    local rnd=$(expr $RANDOM % 25)
-    local hh=$(expr $rnd / 2)
-    local mm=$(expr $rnd % 2 \* 3)"0"
-    local sgn=$(expr $RANDOM % 2)
-    if [ $sgn -eq 0 ]
-    then
-        echo "GMT+$hh:$mm"
-    else
-        echo "GMT-$hh:$mm"
-    fi
-}
+appender.testlogger.name = TestLogger
+appender.testlogger.type = CONSOLE
+appender.testlogger.target = SYSTEM_ERR
+appender.testlogger.layout.type = PatternLayout
+appender.testlogger.layout.pattern = %-4r [%tid %t] %-5p %c %x - %m%n
