fix dependency for orc-format and test it

--- a/paimon-iceberg/pom.xml
+++ b/paimon-iceberg/pom.xml
@@ -46,6 +46,12 @@ under the License.
             <artifactId>paimon-bundle</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.orc</groupId>
+                    <artifactId>orc-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
