--- a/.github/workflows/utitcase-flink-1.x.yml
+++ b/.github/workflows/utitcase-flink-1.x.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Build Flink
         run: |
           COMPILE_MODULE="org.apache.paimon:paimon-flink-${{ matrix.flink_version }}"
+          echo "Show maven version & java"
+          mvn -v
           echo "Start compiling modules: $COMPILE_MODULE"
           mvn -T 2C -B clean install -DskipTests -Pflink1,spark3 -pl "${COMPILE_MODULE}" -am
 
