check code style and test

--- a/paimon-python/dev/cfg.ini
+++ b/paimon-python/dev/cfg.ini
@@ -22,6 +22,15 @@
 ignore=E226,E241,E305,E402,E722,E731,E741,W503,W504,F821
 max-line-length=120
 exclude=.tox/*,dev/*,build/*,dist/*
+# autopep8 setting
+in-place = true
+aggressive = 3
+recursive = true
+
+[autoflake]
+in-place=true
+recursive=true
+remove-all-unused-imports=true
 
 [mypy]
 ignore_missing_imports = True
