--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -44,7 +44,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
         run: |
-          python -m pip install -q flake8==4.0.1 mypy==1.5.1 2>&1 pytest~=7.0  >/dev/null
+          python -m pip install -q flake8==4.0.1 mypy==1.5.1 pytest~=7.0 2>&1 >/dev/null
       - name: Run lint-python.sh
         run: |
           chmod +x paimon-python/dev/lint-python.sh
