--- a/paimon-python/dev/cfg.ini
+++ b/paimon-python/dev/cfg.ini
@@ -19,8 +19,8 @@
 [flake8]
 # We follow PEP 8 (https://www.python.org/dev/peps/pep-0008/) with one exception: lines can be
 # up to 100 characters in length, not 79.
-ignore=E226,E241,E305,E402,E722,E731,E741,W503,W504
-max-line-length=100
+ignore=E226,E241,E305,E402,E722,E731,E741,W503,W504,F821
+max-line-length=120
 exclude=.tox/*,dev/*,build/*,dist/*
 
 [mypy]
