--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,26 @@ under the License.
         </profile>
 
         <profile>
+            <id>paimon-website-javadoc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.1.1</version><!--$NO-MVN-MAN-VER$-->
+                        <configuration>
+                            <quiet>true</quiet>
+                            <detectOfflineLinks>false</detectOfflineLinks>
+                            <additionalJOptions combine.children="append">
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>spark3</id>
             <modules>
                 <module>paimon-spark/paimon-spark3-common</module>
