change okhttp client to apache httpClient

--- a/paimon-api/pom.xml
+++ b/paimon-api/pom.xml
@@ -56,6 +56,17 @@ under the License.
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents.core5</groupId>
+            <artifactId>httpcore5</artifactId>
+            <version>${apache.hc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${apache.hc.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
