--- a/paimon-api/pom.xml
+++ b/paimon-api/pom.xml
@@ -125,11 +125,7 @@ under the License.
                                     <shadedPattern>org.apache.paimon.shade.okio</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>org.apache.hc.core5</pattern>
-                                    <shadedPattern>org.apache.paimon.shade.httpcore5</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>org.apache.hc.client5</pattern>
+                                    <pattern>org.apache.http</pattern>
                                     <shadedPattern>org.apache.paimon.shade.httpclient5</shadedPattern>
                                 </relocation>
                             </relocations>
