--- a/paimon-api/pom.xml
+++ b/paimon-api/pom.xml
@@ -60,12 +60,12 @@ under the License.
         <dependency>
             <groupId>org.apache.httpcomponents.core5</groupId>
             <artifactId>httpcore5</artifactId>
-            <version>${apache.hc.version}</version>
+            <version>${apache.hc.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>${apache.hc.version}</version>
+            <version>${apache.hc.client.version}</version>
         </dependency>
     </dependencies>
 
