--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,8 @@ under the License.
         <janino.version>3.0.11</janino.version>
         <mockito.version>3.4.6</mockito.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <apache.hc.version>5.2.1</apache.hc.version>
+        <apache.hc.core.version>5.3.3</apache.hc.core.version>
+        <apache.hc.client.version>5.4.2</apache.hc.client.version>
         <jaxb.api.version>2.3.1</jaxb.api.version>
         <findbugs.version>1.3.9</findbugs.version>
         <json-smart.version>2.5.2</json-smart.version>
