--- a/paimon-api/pom.xml
+++ b/paimon-api/pom.xml
@@ -55,6 +55,7 @@ under the License.
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
