--- a/.github/workflows/utitcase-flink-1.x.yml
+++ b/.github/workflows/utitcase-flink-1.x.yml
@@ -23,6 +23,7 @@ on:
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
+      - 'paimon-python/**'
 
 env:
   JDK_VERSION: 8
@@ -38,7 +39,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        flink_version: ['common', 'cdc', '1.15', '1.16', '1.17', '1.18', '1.19', '1.20']
+        flink_version: [ 'common', 'cdc', '1.15', '1.16', '1.17', '1.18', '1.19', '1.20' ]
 
     steps:
       - name: Checkout code
