--- a/.github/workflows/utitcase-flink-2.x-jdk11.yml
+++ b/.github/workflows/utitcase-flink-2.x-jdk11.yml
@@ -24,6 +24,7 @@ on:
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
+      - 'paimon-python/**'
 
 env:
   JDK_VERSION: 11
@@ -43,7 +44,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build Flink
-        run:  |
+        run: |
           mvn -T 2C -B clean install -DskipTests -Pflink2,spark3
 
       - name: Test Flink
