--- a/.github/workflows/utitcase-spark-3.x.yml
+++ b/.github/workflows/utitcase-spark-3.x.yml
@@ -24,6 +24,7 @@ on:
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
+      - 'paimon-python/**'
 
 env:
   JDK_VERSION: 8
@@ -45,7 +46,7 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
       - name: Build Spark
-        run:  mvn -T 2C -B clean install -DskipTests
+        run: mvn -T 2C -B clean install -DskipTests
       - name: Test Spark
         timeout-minutes: 60
         run: |
