--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@ under the License.
         <zstd-jni.version>1.5.5-11</zstd-jni.version>
         <janino.version>3.0.11</janino.version>
         <mockito.version>3.4.6</mockito.version>
+        <mockito-junit-jupiter.version>4.11.0</mockito-junit-jupiter.version>
         <okhttp.version>4.12.0</okhttp.version>
         <apache.hc.core.version>5.3.3</apache.hc.core.version>
         <apache.hc.client.version>5.4.2</apache.hc.client.version>
