--- a/.github/workflows/utitcase-spark-3.x.yml
+++ b/.github/workflows/utitcase-spark-3.x.yml
@@ -47,9 +47,11 @@ jobs:
         with:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
-      - name: Build Spark
+      - name: Build Spark 3 with scala 2.12
         run:  mvn -T 2C -B clean install -DskipTests
-      - name: Test Spark
+      - name: Build Spark 3 with scala 2.13
+        run:  mvn -T 2C -B clean install -DskipTests -Pspark3_2.13
+      - name: Test Spark 3 with scala 2.12
         timeout-minutes: 60
         run: |
           # run tests with random timezone to find out timezone related bugs
@@ -62,5 +64,18 @@ jobs:
           done
           test_modules="${test_modules%,}"
           mvn -T 2C -B verify -pl "${test_modules}" -Duser.timezone=$jvm_timezone
+      - name: Test Spark 3 with scala 2.13
+        timeout-minutes: 60
+        run: |
+          # run tests with random timezone to find out timezone related bugs
+          . .github/workflows/utils.sh
+          jvm_timezone=$(random_timezone)
+          echo "JVM timezone is set to $jvm_timezone"
+          test_modules=""
+          for suffix in ut 3.5 3.4 3.3 3.2; do
+          test_modules+="org.apache.paimon:paimon-spark-${suffix},"
+          done
+          test_modules="${test_modules%,}"
+          mvn -T 2C -B verify -pl "${test_modules}" -Duser.timezone=$jvm_timezone -Pspark3_2.13
         env:
           MAVEN_OPTS: -Xmx4096m
