--- a/paimon-spark/paimon-spark-3.3/pom.xml
+++ b/paimon-spark/paimon-spark-3.3/pom.xml
@@ -28,8 +28,8 @@ under the License.
         <version>1.4-SNAPSHOT</version>
     </parent>
 
-    <artifactId>paimon-spark-3.3</artifactId>
-    <name>Paimon : Spark : 3.3</name>
+    <artifactId>paimon-spark-3.3_${scala.binary.version}</artifactId>
+    <name>Paimon : Spark : 3.3: ${scala.binary.version}</name>
 
     <properties>
         <spark.version>3.3.4</spark.version>
