--- a/paimon-codegen/pom.xml
+++ b/paimon-codegen/pom.xml
@@ -65,10 +65,11 @@ under the License.
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>${scala-maven-plugin.version}</version>
                 <executions>
-                    <!-- Run scala compiler in the compile phase, after Java dependencies are available -->
+                    <!-- Run scala compiler in the process-resources phase, so that dependencies on
+                        scala classes can be resolved later in the (Java) compile phase -->
                     <execution>
                         <id>scala-compile-first</id>
-                        <phase>compile</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>add-source</goal>
                             <goal>compile</goal>
