--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,8 @@ under the License.
         <scala.binary.version>2.12</scala.binary.version>
         <!-- TODO: Update default Flink to 2.x after Paimon updates default Java to 11 -->
         <paimon-flinkx-common>paimon-flink1-common</paimon-flinkx-common>
-        <paimon-flink-common.flink.version>1.20.1</paimon-flink-common.flink.version>
+        <paimon.flink.version>1.20.1</paimon.flink.version>
+        <paimon-flink-common.flink.version>${paimon.flink.version}</paimon-flink-common.flink.version>
         <flink.scala.binary.version>2.12</flink.scala.binary.version>
         <scala212.version>2.12.18</scala212.version>
         <scala213.version>2.13.16</scala213.version>
@@ -120,7 +121,7 @@ under the License.
         <test.randomization.seed/>
         <test.unit.pattern>**/*Test.*</test.unit.pattern>
         <test.flink.main.version>1.20</test.flink.main.version>
-        <test.flink.version>1.20.1</test.flink.version>
+        <test.flink.version>${paimon.flink.version}</test.flink.version>
         <test.flink.connector.kafka.version>3.4.0-1.20</test.flink.connector.kafka.version>
         <test.flink.connector.hive.version>1.20.0</test.flink.connector.hive.version>
         <test.mysql.connector.java.version>8.0.27</test.mysql.connector.java.version>
