--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,7 @@ under the License.
         <scala.binary.version>2.12</scala.binary.version>
         <!-- TODO: Update default Flink to 2.x after Paimon updates default Java to 11 -->
         <paimon-flinkx-common>paimon-flink1-common</paimon-flinkx-common>
-        <paimon.flink.version>1.20.1</paimon.flink.version>
-        <paimon-flink-common.flink.version>${paimon.flink.version}</paimon-flink-common.flink.version>
+        <paimon-flink-common.flink.version>1.20.1</paimon-flink-common.flink.version>
         <flink.scala.binary.version>2.12</flink.scala.binary.version>
         <scala212.version>2.12.18</scala212.version>
         <scala213.version>2.13.16</scala213.version>
@@ -445,7 +444,7 @@ under the License.
                 <paimon-flinkx-common>paimon-flink1-common</paimon-flinkx-common>
                 <paimon-flink-common.flink.version>1.20.1</paimon-flink-common.flink.version>
                 <test.flink.main.version>1.20</test.flink.main.version>
-                <test.flink.version>1.20.1</test.flink.version>
+                <test.flink.version>${paimon-flink-common.flink.version}</test.flink.version>
             </properties>
             <modules>
                 <module>paimon-flink/paimon-flink-1.15</module>
@@ -469,7 +468,7 @@ under the License.
                 <paimon-flinkx-common>paimon-flink2-common</paimon-flinkx-common>
                 <paimon-flink-common.flink.version>2.1.0</paimon-flink-common.flink.version>
                 <test.flink.main.version>2.1</test.flink.main.version>
-                <test.flink.version>2.1.0</test.flink.version>
+                <test.flink.version>${paimon-flink-common.flink.version}</test.flink.version>
                 <target.java.version>11</target.java.version>
             </properties>
             <modules>
@@ -480,6 +479,29 @@ under the License.
             <activation>
                 <property>
                     <name>flink2</name>
+                </property>
+            </activation>
+        </profile>
+
+        <profile>
+            <id>flink1.18</id>
+            <properties>
+                <paimon-flinkx-common>paimon-flink1-common</paimon-flinkx-common>
+                <paimon-flink-common.flink.version>1.18.1</paimon-flink-common.flink.version>
+                <test.flink.main.version>1.18</test.flink.main.version>
+                <test.flink.version>${paimon-flink-common.flink.version}</test.flink.version>
+            </properties>
+            <modules>
+                <module>paimon-flink/paimon-flink-1.15</module>
+                <module>paimon-flink/paimon-flink-1.16</module>
+                <module>paimon-flink/paimon-flink-1.17</module>
+                <module>paimon-flink/paimon-flink-1.18</module>
+                <module>paimon-flink/paimon-flink-1.19</module>
+                <module>paimon-flink/paimon-flink-1.20</module>
+            </modules>
+            <activation>
+                <property>
+                    <name>flink1.18</name>
                 </property>
             </activation>
         </profile>
