Add paimon hadoop uber module

--- a/paimon-filesystems/pom.xml
+++ b/paimon-filesystems/pom.xml
@@ -33,6 +33,7 @@
 
     <modules>
         <module>paimon-hadoop-shaded</module>
+        <module>paimon-hadoop-uber</module>
         <module>paimon-oss</module>
         <module>paimon-oss-impl</module>
         <module>paimon-s3</module>
