[ci] Rename to Python Check Code Style and Test

--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -16,7 +16,7 @@
 # limitations under the License.
 ################################################################################
 
-name: Check Code Style and Test
+name: Python Check Code Style and Test
 
 on:
   push:
